--- a/src/Frontend/addresses.html
+++ b/src/Frontend/addresses.html
@@ -35,7 +35,7 @@
                 <a href="profile.html" class="flex items-center gap-3 px-4 py-2 rounded-xl hover:bg-white/20">
                     <i class="fas fa-user"></i> Profile
                 </a>
-                <a href="#" class="flex items-center gap-3 px-4 py-2 rounded-xl hover:bg-white/20">
+                <a href="my-orders-backend.html" class="flex items-center gap-3 px-4 py-2 rounded-xl hover:bg-white/20">
                     <i class="fas fa-box"></i> My Orders
                 </a>
                 <a href="addresses.html" class="flex items-center gap-3 px-4 py-2 rounded-xl bg-white/20">
