--- a/src/Backend/src/main/resources/static/seller-dashboard.html
+++ b/src/Backend/src/main/resources/static/seller-dashboard.html
@@ -548,9 +548,9 @@
                             class="order-tab px-6 py-3 text-sm font-medium border-b-2 border-transparent text-gray-600 hover:text-gray-800 whitespace-nowrap">
                             Pending
                         </button>
-                        <button onclick="filterOrders('PROCESSING')" data-status="PROCESSING"
+                        <button onclick="filterOrders('CONFIRMED')" data-status="CONFIRMED"
                             class="order-tab px-6 py-3 text-sm font-medium border-b-2 border-transparent text-gray-600 hover:text-gray-800 whitespace-nowrap">
-                            Processing
+                            Confirmed
                         </button>
                         <button onclick="filterOrders('SHIPPING')" data-status="SHIPPING"
                             class="order-tab px-6 py-3 text-sm font-medium border-b-2 border-transparent text-gray-600 hover:text-gray-800 whitespace-nowrap">
@@ -2010,8 +2010,10 @@
             container.innerHTML = orders.map(order => {
                 const statusColors = {
                     'PENDING': 'bg-yellow-100 text-yellow-800',
-                    'PROCESSING': 'bg-blue-100 text-blue-800',
+                    'CONFIRMED': 'bg-blue-100 text-blue-800',
+                    'PAID': 'bg-blue-100 text-blue-800',
                     'SHIPPING': 'bg-purple-100 text-purple-800',
+                    'SHIPPED': 'bg-indigo-100 text-indigo-800',
                     'COMPLETED': 'bg-green-100 text-green-800',
                     'CANCELLED': 'bg-red-100 text-red-800'
                 };
@@ -2039,12 +2041,12 @@
                                 <i class="fas fa-eye mr-1"></i>View Details
                             </button>
                             ${order.orderStatus === 'PENDING' ? `
-                                <button onclick="updateOrderStatusUI('${order.id}', 'PROCESSING')" 
+                                <button onclick="updateOrderStatusUI('${order.id}', 'CONFIRMED')" 
                                     class="px-4 py-2 bg-orange-500 hover:bg-orange-600 text-white rounded-lg text-sm font-bold transition">
                                     <i class="fas fa-check mr-1"></i>Confirm
                                 </button>
                             ` : ''}
-                            ${order.orderStatus === 'PROCESSING' ? `
+                            ${order.orderStatus === 'CONFIRMED' ? `
                                 <button onclick="updateOrderStatusUI('${order.id}', 'SHIPPING')" 
                                     class="px-4 py-2 bg-blue-500 hover:bg-blue-600 text-white rounded-lg text-sm font-bold transition">
                                     <i class="fas fa-truck mr-1"></i>Ship
