--- a/src/Frontend/my-orders-backend.html
+++ b/src/Frontend/my-orders-backend.html
@@ -79,7 +79,7 @@
         function getStatusColor(status) {
             const map = {
                 PENDING: 'bg-yellow-100 text-yellow-800',
-                PROCESSING: 'bg-blue-100 text-blue-800',
+                CONFIRMED: 'bg-blue-100 text-blue-800',
                 SHIPPING: 'bg-purple-100 text-purple-800',
                 SHIPPED: 'bg-indigo-100 text-indigo-800',
                 COMPLETED: 'bg-green-100 text-green-800',
