--- a/src/Frontend/order-detail.html
+++ b/src/Frontend/order-detail.html
@@ -313,7 +313,7 @@
         }
 
         function getStatusClass(status) {
-            const map = { PENDING: 'bg-yellow-100 text-yellow-800', PROCESSING: 'bg-blue-100 text-blue-800',
+            const map = { PENDING: 'bg-yellow-100 text-yellow-800', CONFIRMED: 'bg-blue-100 text-blue-800',
                 SHIPPING: 'bg-purple-100 text-purple-800', SHIPPED: 'bg-indigo-100 text-indigo-800',
                 COMPLETED: 'bg-green-100 text-green-800', CANCELLED: 'bg-red-100 text-red-800' };
             return map[status] || 'bg-gray-100 text-gray-800';
