refactor: Enhance CORS configuration, improve order handling, and implement payment webhook functionality
- Updated CORS configuration to specify allowed headers for better security.
- Refactored OrderController to use Lombok's @RequiredArgsConstructor for cleaner code.
- Added 'collectCash' field to OrderResponse for clearer payment status representation.
- Implemented enrichForShipper method in OrderResponseService to enhance order details for shippers.
- Created PaymentWebhookController to handle payment gateway callbacks and update order statuses accordingly.
- Improved product detail retrieval logic in frontend to support multiple ID sources.

--- a/src/Backend/src/main/resources/static/product-detail.html
+++ b/src/Backend/src/main/resources/static/product-detail.html
@@ -407,7 +407,16 @@
                 const params = new URLSearchParams(window.location.search);
                 let id = params.get('id');
 
-                // Fallback: Check localStorage if ID is missing from URL
+                if (!id && window.location.hash) {
+                    const hashStr = window.location.hash.substring(1);
+                    const hashParams = new URLSearchParams(hashStr);
+                    id = hashParams.get('id');
+                }
+                if (!id && window.location.pathname) {
+                    const match = window.location.pathname.match(/\/product-detail(?:\.html)?\/([a-zA-Z0-9]+)/);
+                    if (match) id = match[1];
+                }
+
                 if (!id) {
                     id = localStorage.getItem('lastClickedProductId');
                 }
