--- a/src/Frontend/index.html
+++ b/src/Frontend/index.html
@@ -581,8 +581,7 @@
                 productCard.onclick = () => {
                     if (pid) {
                         localStorage.setItem('lastClickedProductId', pid);
-                        // Use hash-based navigation to bypass server routing issues
-                        window.location.href = `product-detail.html#id=${pid}`;
+                        window.location.href = `product-detail.html?id=${pid}`;
                     } else {
                         console.error("Product ID missing:", product);
                     }
