--- a/src/Backend/src/main/resources/static/admin-dashboard.html
+++ b/src/Backend/src/main/resources/static/admin-dashboard.html
@@ -114,9 +114,6 @@
                         <div id="notificationList" class="max-h-80 overflow-y-auto">
                             <div class="p-4 text-center text-gray-500 text-sm">Loading...</div>
                         </div>
-                        <div class="bg-gray-50 px-4 py-2 border-t border-gray-100 text-center">
-                            <a href="#" class="text-xs text-gray-500 hover:text-[#AD3029]">View all</a>
-                        </div>
                     </div>
                 </div>
                 <div
@@ -1076,22 +1073,22 @@
 
 
             container.innerHTML = shops.map(shop => `
-                <div class="bg-white rounded-xl shadow-sm border border-gray-100 hover:shadow-md transition overflow-hidden">
-                    <div class="p-5">
+                <div class="bg-white rounded-xl shadow-sm border border-gray-100 hover:shadow-md transition overflow-hidden flex flex-col h-full">
+                    <div class="p-5 flex flex-col h-full">
                         <div class="flex justify-between items-start mb-4">
                             <div class="flex items-center gap-3">
-                                <div class="w-10 h-10 rounded-full bg-[#FEEFCD] text-[#AD3029] font-bold text-lg flex items-center justify-center">
+                                <div class="w-10 h-10 rounded-full bg-[#FEEFCD] text-[#AD3029] font-bold text-lg flex items-center justify-center min-w-[2.5rem]">
                                     ${shop.name.charAt(0).toUpperCase()}
                                 </div>
-                                <div>
-                                    <h3 class="text-lg font-bold text-gray-800">${shop.name}</h3>
+                                <div class="min-w-0">
+                                    <h3 class="text-lg font-bold text-gray-800 truncate">${shop.name}</h3>
                                     <p class="text-xs text-gray-500">ID: ...${shop.id.substr(-6)}</p>
                                 </div>
                             </div>
-                            <span class="bg-[#FEEFCD] text-[#AD3029] text-[10px] font-bold px-2 py-1 rounded border border-[#AD3029]/20 uppercase">Active</span>
+                            <span class="bg-[#FEEFCD] text-[#AD3029] text-[10px] font-bold px-2 py-1 rounded border border-[#AD3029]/20 uppercase shrink-0">Active</span>
                         </div>
                         
-                        <div class="space-y-3 mb-6 bg-gray-50 p-4 rounded-lg">
+                        <div class="space-y-3 mb-6 bg-gray-50 p-4 rounded-lg flex-1">
                            <div class="flex items-center gap-2 text-sm text-gray-600">
                                 <i class="fas fa-user-circle w-4 text-gray-400"></i>
                                 <span class="truncate">${shop.identityFullName || 'Unknown Owner'}</span>
@@ -1102,15 +1099,24 @@
                            </div>
                            <div class="flex items-center gap-2 text-sm text-gray-600">
                                 <i class="fas fa-map-marker-alt w-4 text-gray-400"></i>
-                                <span class="truncate w-full">${shop.address}</span>
+                                <span class="truncate w-full block">${shop.address}</span>
+                           </div>
+                           <div class="flex items-center gap-2 text-sm text-gray-600">
+                                <i class="fas fa-box w-4 text-gray-400"></i>
+                                <span>${shop.productCount || 0} Products</span>
                            </div>
                         </div>
 
 
-                        <div class="grid grid-cols-1 gap-3">
-                             <button class="bg-[#FEEFCD]/50 text-[#AD3029] font-bold py-2 rounded-lg text-sm cursor-not-allowed" disabled>
-                                <i class="fas fa-check-circle mr-1"></i> Running
-                            </button>
+                        <div class="grid grid-cols-1 gap-3 mt-auto">
+                            ${(shop.productCount === 0 || !shop.productCount)
+                    ? `<button onclick="deleteShop('${shop.id}')" class="w-full bg-white border border-red-200 text-red-600 hover:bg-red-50 font-bold py-2 rounded-lg text-sm transition text-center">
+                                    <i class="fas fa-trash-alt mr-1"></i> Delete Shop
+                                   </button>`
+                    : `<button class="w-full bg-[#FEEFCD]/50 text-[#AD3029] font-bold py-2 rounded-lg text-sm cursor-not-allowed text-center" disabled>
+                                    <i class="fas fa-check-circle mr-1"></i> Running
+                                   </button>`
+                }
                         </div>
                     </div>
                 </div>
@@ -1708,6 +1714,30 @@
 
 
 
+
+
+
+        async function deleteShop(id) {
+            if (!confirm("Are you sure you want to delete this shop? This action cannot be undone.")) return;
+
+            try {
+                const response = await fetch(`http://localhost:8080/api/shop/admin/delete/${id}`, {
+                    method: 'DELETE',
+                    headers: { 'Authorization': `Bearer ${token}` }
+                });
+
+                if (response.ok) {
+                    showToast("Shop deleted successfully!", "success");
+                    loadActiveShops();
+                } else {
+                    const text = await response.text();
+                    showToast(`Failed: ${text}`, "error");
+                }
+            } catch (err) {
+                console.error(err);
+                showToast("Connection error", "error");
+            }
+        }
     </script>
     <script src="js/notification.js"></script>
 </body>
